fix showing scrollbar in home section

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header.scrolled {
 	max-width: 100%;
 	width: 70px;
 	height: auto;
-	margin-left: 10px;
+	margin-left: 15px;
 }
 
 .navlist {
@@ -130,7 +130,7 @@ header.scrolled .bx-menu {
 	text-decoration: none;
 	font-weight: 500;
 	transition: ease .50s;
-	margin-right: 20px;
+	margin-right: 15px;
 }
 
 .cv-btn:hover{
@@ -190,6 +190,7 @@ body {
 	background-position: center;
 	background-size: cover;
 	position: relative;
+	overflow-y: hidden;
 }
 
 /*hide scrollbar*/
@@ -918,7 +919,6 @@ body::-webkit-scrollbar{
 	.cv-btn {
 		padding: 8px 15px;
 		border: 2px solid var(--bg-color-primary);
-		margin-right: 40px;
 	}
 
 	header.scrolled .cv-btn {
